--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>𝗪𝗘𝗔𝗧𝗛𝗘𝗥 𝗡𝗘𝗪𝗦 𝗙𝗢𝗥 𝗙𝗥𝗘𝗘 𝗕𝗬 𝗭𝗘𝗥𝗢𝗖𝗢𝗗𝗘𝗦 𝗣𝗛</title>
+    <title>WEATHER SEARCH</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
